--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,7 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {},
           "configurations": {
             "production": {
               "browserTarget": "p:build:production"
