--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@berriz44/quark": "^1.0.1",
     "browserify": "^17.0.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
