--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "paths": {
       "crypto": [
         "./node_modules/crypto-browserify"
@@ -50,5 +53,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "e2e",
+    "**/*.spec.ts"
+  ]
 }
