--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.2.9",
-    "@berriz44/quark": "^1.0.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.0",
     "browserify": "^17.0.0",
+    "chart.js": "^4.3.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "md5": "^2.3.0",
